@@ -23,7 +23,8 @@ sunuo (0.3.2) unstable; urgency=low
     - initialize BaseCreature.m_arSpellAttack and m_arSpellDefense on demand
     - don't allocate an empty array for empty book pages
     - create PlayerMobile.m_VisList, PlayerMobile.m_PermaFlags,
-      PlayerMobile.m_JusticeProtectors, BaseCreature.m_Owners on demand
+      PlayerMobile.m_JusticeProtectors, BaseCreature.m_Owners,
+      PlayerMobile.m_AntiMacroTable on demand
   * moved into separate script libraries:
     - Engines.MyRunUO
     - Engines.Reports
